force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipName>Pricing_Request_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>