force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Markup (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>