force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Multiplier (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>