force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Pricing_Request_Line__c</field>
            <operation>equals</operation>
            <valueField>Question__c.Pricing_Request_Line__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>BT Pricing Request Line Details</relationshipLabel>
    <relationshipName>Pricing_Request_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>