force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Pricing_Request_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>