force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Projected_Profit__c.field-meta.xml
<CustomField>
    <fullName>Projected_Profit__c</fullName>
    <formula>Price__c -  Total_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>