force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line</label>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipName>Pricing_Request_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>