force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/RFQ__c.field-meta.xml
<CustomField>
    <fullName>RFQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFQ</label>
    <referenceTo>RFQ__c</referenceTo>
    <relationshipName>Pricing_Request_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>