force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs__c</fullName>
    <formula>Quantity__c *  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>