force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Total_Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Markup_Amount__c</fullName>
    <formula>Markup__c *  Total_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Markup Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>