force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Unit_Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Markup_Amount__c</fullName>
    <formula>Markup__c *  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Markup Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>