force-app/main/default/objects/Pricing_Request_Line_Details__c/fields/Unit_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sales_Price__c</fullName>
    <formula>Cost__c +  Unit_Markup_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>